Collect some words & sentences in English version html files

--- a/en/BEEP.html
+++ b/en/BEEP.html
@@ -36,7 +36,7 @@ The rhythm will stop while pressing the button of the IchigoJam.<br>
 2. Make a rhythm with fast tempo<br>
 3. Add this program "12 BEEP 20:WAIT 30" to change the tripple time (musical time pattern)<br>
 4. Make a quadruple rhythm<br>
-5. Change the rhythm "GOTO 15" to "GOTO 10" on line 15<br>
+5. Check the rhythm if change "GOTO 15" to "GOTO 10" on line 15<br>
 6. Make your original rhythm!<br>
 </section>
 
