--- a/en/GOTO.html
+++ b/en/GOTO.html
@@ -25,13 +25,14 @@ To stop, press [ESC] key.
 <section>
 Fast blink
 <div id="btn-3"></div><script>make15("btn-3", "LIST\n10 LED1:WAIT3:LED0:WAIT3")</script>
-Make a line 15 between line 10 and line 20 by changing the line 10's head to 15 and wait 3 to 30, and press ENTER key.<br>
-Display a program with "LIST" (=F4 key), press ENTER key, and execute by "RUN" (=F5 key).
+Display a program with "LIST" (=F4 key).
+Change two "30" to "3" in line 10 , press ENTER key, and execute by "RUN" (=F5 key).
 </section>
 
 <section>
-<div id="btn-4"></div><script>make15("btn-4", "15 LED1:WAIT30:LED0:WAIT30")</script>
 Repeat alternately between short blink and long blink.
+<div id="btn-4"></div><script>make15("btn-4", "15 LED1:WAIT30:LED0:WAIT30")</script>
+Make a line 15 between line 10 and line 20 by changing the line 10's head to 15 and wait 3 to 30, and press ENTER key.<br>
 </section>
 
 <section>
