--- a/en/IF.html
+++ b/en/IF.html
@@ -7,6 +7,7 @@
 <h1>Let it judge / IF</h1>
 
 <section>
+Avoid if balls flew to you. Jump if there is hole.<br>
 "IF" is a command to let the computer judge.<br>
 <div id="if-1"></div><script>make15("if-1", "10 IF BTN()=0 GOTO 10\nRUN")</script>
 If the button is not pressed, line 10 repeats.<br>
