--- a/en/INPUT.html
+++ b/en/INPUT.html
@@ -22,14 +22,14 @@ The number put in C is memorized!
 
 <section>
 For checking answers, "IF" is used to judge.
-<div id="input3"></div><script>make15("input3", "60 IF C=A+B ?\"ATARI\"")</script>
+<div id="input3"></div><script>make15("input3", "60 IF C=A+B ?\"GOT IT!\"")</script>
 </section>
 
 <section>
 Let's use "ELSE" when you want to show a miss.
-<div id="input4"></div><script>make15("input4", "60 IF C=A+B ?\"ATARI\" ELSE ?\"HAZURE\"")</script>
+<div id="input4"></div><script>make15("input4", "60 IF C=A+B ?\"GOT IT!\" ELSE ?\"WRONG\"")</script>
 It can also appear with a question text.
-<div id="input5"></div><script>make15("input5", "40 INPUT \"KOTAEHA?\",C")</script>
+<div id="input5"></div><script>make15("input5", "40 INPUT \"ANSWER IS?\",C")</script>
 </section>
 
 <section>
