add link to LOGIC on index.html

--- a/en/index.html
+++ b/en/index.html
@@ -43,6 +43,7 @@ Programming course<br>
 - <a href=RND.html>Make a dice / RND</a><br>
 - <a href=PCG.html>Make an Original Character / PCG</a><br>
 - <a href=TICK.html>Make a stopwatch / TICK</a><br>
+- <a href=LOGIC.html>1 + 1 = 1, LOGIC PUZZLE</a><br>
 </section>
 
 <section>
