--- a/ja/index.html
+++ b/ja/index.html
@@ -78,6 +78,8 @@ body {
 - <a href=PWM.html>サーボをあやつる PWM</a><br>
 - <a href=IN.html>0か1かのにゅうりょく IN（イン）</a><br>
 - <a href=ANA.html>りょうのにゅうりょく ANA（アナ）</a><br>
+- <a href=OUTANA1.html>じどうブレーキをつくる OUTとANA</a><br>
+- <a href=OUTANA2.html>サーボとセンサーで電子工作</a><br>
 - <a href=CHAT.html>2だいつないでチャットしよう</a><br>
 - <a href=CHOCO.html>Ichigoチョコでめいろだっしゅつ</a><br>
 - <a href=FLOWERLED.html>おはなLEDでルーレットゲーム</a><br>
