--- a/ja/OUTANA2.html
+++ b/ja/OUTANA2.html
@@ -29,7 +29,7 @@
 </section>
 
 <section>
-変数(A)をつかってすっきり
+変数(A)を使ってすっきり
 <div class=ichigojam>1 IF BTN()=0 CONT
 20 A=ANA(2)/10
 30 PWM 2,80:WAIT A
