--- a/ja/TANGO.html
+++ b/ja/TANGO.html
@@ -15,13 +15,13 @@
 <section>
 ねこはえいごで"cat"だね！<br>
 がめんにひょうじしてみよう<br>
-<div class=ichigojam>"ネコ ハ エイゴ デ cat デス"</div>
+<div class=ichigojam>?"ネコ ハ エイゴ デ cat デス"</div>
 </section>
 
 
 <section><br>
 ねこのえいごで、くいずをつくってみよう！
-<div class=ichigojam>10 "ネコ　ハ　エイゴ　デ　ナニ デスカ？"
+<div class=ichigojam>10 ?"ネコ　ハ　エイゴ　デ　ナニ デスカ？"
 20 ?"1:DOG 2:CAT 3:KAT
 </div>
 3たくもんだいにしてみよう！<br>
@@ -38,7 +38,7 @@
 </section>
 <section>
 ほかのたんごだとどうなるかな？
-<div class=ichigojam>10 "リンゴ ハ エイゴ デ ナニ デスカ？"
+<div class=ichigojam>10 ?"リンゴ ハ エイゴ デ ナニ デスカ？"
 20 ?"1:APPLE 2:APPRE 3:ORANGE
 30 INPUT A
 40 IF A=1 ?"SEIKAI!" ELSE ?"HAZURE!"
