--- a/ja/index.html
+++ b/ja/index.html
@@ -64,6 +64,7 @@ body {
 えいご コース<br>
 - <a href=A2Z.html>AからZまで、はやうちゲーム</a><br>
 - <a href=ENGNUM.html>えいごのかずをマスターしよう</a><br>
+- <a href=TANGO.html>たんごてすと</a><br>
 </section>
 
 <section>
