「かけざんめいじん」追加 furigana.js 仕様

--- a/ja/index.html
+++ b/ja/index.html
@@ -49,6 +49,7 @@ body {
 <section>
 さんすう コース<br>
 - <a href=ADD.html>1から100までたす</a><br>
+- <a href=MULMASTER.html>かけざんめいじん</a><br>
 - <a href=MOD.html>じかんわりづくりとあまり</a><br>
 - <a href=FOR2.html>くりかえしでわりざん</a><br>
 - <a href=MATH1.html#kana>こうばいすうさがし</a>（<a href=MATH1.html>公倍数さがし</a>）<br>
