--- a/ja/MULMASTER.html
+++ b/ja/MULMASTER.html
@@ -2,7 +2,7 @@
 <title>かけざん名人（算数）</title>
 <link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ichigojam-print.css">
 <script type="module">
-import furigana from "./furigana.mjs";
+import furigana from "https://ichigojam.github.io/furigana-es/furigana.mjs";
 window.onload = async () => await furigana.addRuby("ichigojam-kana.csv");
 </script>
 </head><body>
