MOD : sw/ADD.html w/new css style , no js ADD : sw/index.html w/new css style , no js

--- a/sw/ADD.html
+++ b/sw/ADD.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>Jumlisha kutoka 1 mpaka 100 - IchigoJam</title>
-<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-<script src="ichigojamlist.js"></script>
+<link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ichigojam-print.css">
+<script type="module">
+</script>
 </head><body>
 
 <h1>Jumlisha kutoka 1 mpaka 100 - IchigoJam</h1>
 
 <section>
 Kutumia "?", Uliza kompyuta "1+1".<br>
-<div id="add1-1"></div><script>make15("add1-1", "?1+1")</script>
+<div class=ichigojam>?1+1
+</div>
 Ilijibu "2" kwa kibonye ENTER. Hivyo basi, vipi kuhusu "1+2"?
-<div id="add1-2"></div><script>make15("add1-2", "?1+2")</script>
+<div class=ichigojam>?1+2
+</div>
 </section>
 
 <section>
 Je, kuna 'bowling pins' ngapi jumla?
-<div id="add1-3"></div><script>make15("add1-3", "?1+2+3+4")</script>
+<div class=ichigojam>?1+2+3+4
+</div>
 Ziko 'pins' 10.<br>
 Nini kitatokea kama itaongezeka kwa safuwima 'column' 1?<br>
 Tumia kibonye kishale cha juu/kushoto/kulia, inarejeleza programu!<br>
 Chapa "+5" ili kujumlisha, na bonyeza kibonye ENTER.
-<div id="add1-5"></div><script>make15("add1-5", "?1+2+3+4+5")</script>
+<div class=ichigojam>?1+2+3+4+5
+</div>
 Yatakuwaje matokeo wakati wa kujumlisha 1 kwa 10 kama hivi?
 Kujumlisha 1 kwa 10 katika mwendo huu, jibu ni ngapi?
-<div id="add1-6"></div><script>make15("add1-6", "?1+2+3+4+5+6+7+8+9+10")</script>
+<div class=ichigojam>?1+2+3+4+5+6+7+8+9+10
+</div>
 </section>
 
 <section>
 Vipi kama ni kujumlisha kutoka 1 mpaka 100, inaonekana kuwa gumu!?.<br>
 Hivyo tumia komandi ya kurudia, "FOR".
-<div id="add1-7"></div><script>make15("add1-7", "FOR I=1 TO 100:?I:NEXT")</script>
+<div class=ichigojam>FOR I=1 TO 100:?I:NEXT
+</div>
 Andaa muundo-wa-herufi "A", itakayoweza kujumlishwa zaidi na zaidi.
-<div id="add1-8"></div>
-<script>make15("add1-8", f2s(function() {/*
-A=0
+<div class=ichigojam>A=0
 OK
 FOR I=1 TO 100:A=A+I:NEXT
 OK
 ?A
 5050
-*/}))</script>
+</div>
 </section>
 
 <section>
@@ -51,6 +56,6 @@ OK
 5. Ipi namba ya kikomo ambayo inaweza kukokotolewa kwa uzuri?<br>
 </section>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
+<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/sw/  
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
 </body></html>
