FIX : footer credit

--- a/sw/ADD.html
+++ b/sw/ADD.html
@@ -56,6 +56,6 @@ OK
 5. Ipi namba ya kikomo ambayo inaweza kukokotolewa kwa uzuri?<br>
 </section>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/sw/  
+<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/sw/ ">IchigoJam print</a> https://ichigojam.github.io/print/sw/  
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
 </body></html>
