ADD : BEEP.html, BIN.html, BTN.html in sw MOD : sw/index.html

--- a/sw/index.html
+++ b/sw/index.html
@@ -25,7 +25,9 @@ body {
 <div id="main">
 <section>
 Kosi la Programu<br>
-- comming soon<br>
+- <a href=BEEP.html>Tengeneza sauti / BEEP</a><br>
+- <a href=BIN.html>Tengenza namba jozi / BIN$</a><br>
+- <a href=BTN.html>Julisha mawazo / BTN</a><br>
 </section>
 
 <section>
