ADD : FOR.html, GACHA.html, GOTO.html in sw MOD : sw/index.html

--- a/sw/index.html
+++ b/sw/index.html
@@ -25,7 +25,9 @@ body {
 <div id="main">
 <section>
 Kosi la Programu<br>
+- <a href=GOTO.html>Tengeneza ishara ya usiku / GOTO</a><br>
 - <a href=BEEP.html>Tengeneza sauti / BEEP</a><br>
+- <a href=FOR.html>Kuzidisha kwa rejeleza FOR/NEXT</a><br>
 - <a href=BIN.html>Tengenza namba jozi / BIN$</a><br>
 - <a href=BTN.html>Julisha mawazo / BTN</a><br>
 </section>
@@ -42,7 +44,7 @@ Kosi la Kutengeneza Mtandao wa Tarakilishi<br>
 
 <section>
 Kosi la Programu Tumizi<br>
-- comming soon<br>
+- <a href=GACHA.html>Gacha simulation</a><br>
 </section>
 
 </div>
