ADD : IF.html, INPUT.html, JANKEN.html in sw MOD : sw/index.html

--- a/sw/index.html
+++ b/sw/index.html
@@ -25,6 +25,8 @@ body {
 <div id="main">
 <section>
 Kosi la Programu<br>
+- <a href=INPUT.html>Jibu katika namba / INPUT</a><br>
+- <a href=IF.html>Iache iamue / IF</a><br>
 - <a href=GOTO.html>Tengeneza ishara ya usiku / GOTO</a><br>
 - <a href=BEEP.html>Tengeneza sauti / BEEP</a><br>
 - <a href=FOR.html>Kuzidisha kwa rejeleza FOR/NEXT</a><br>
@@ -44,6 +46,7 @@ Kosi la Kutengeneza Mtandao wa Tarakilishi<br>
 
 <section>
 Kosi la Programu Tumizi<br>
+- <a href=JANKEN.html>Mchezo wa Mkono (Janken)</a><br>
 - <a href=GACHA.html>Gacha simulation</a><br>
 </section>
 
