--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
 - <a href=ja/index.html>IchigoJamプリント (Japanese / 日本語)</a><br>
 - <a href=en/index.html>IchigoJam print (English)</a><br>
 - <a href=rw/index.html>IchigoJam print (Rwandan / Kinyarwanda)</a><br>
+- <a href=sw/index.html>IchigoJam print (Swahili)</a><br>
 </div>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
