ADD : JINKOSIM.html, JUMP.html, KAWAKUDARI.html in sw MOD : sw/index.html

--- a/sw/index.html
+++ b/sw/index.html
@@ -47,6 +47,9 @@ Kosi la Kutengeneza Mtandao wa Tarakilishi<br>
 <section>
 Kosi la Programu Tumizi<br>
 - <a href=JANKEN.html>Mchezo wa Mkono (Janken)</a><br>
+- <a href=KAWAKUDARI.html>Mchezo wa Kawakudari</a><br>
+- <a href=JUMP.html>Mchezo wa Kawakudari</a><br>
+- <a href=JINKOSIM.html>Population simulation</a><br>
 - <a href=GACHA.html>Gacha simulation</a><br>
 </section>
 
