ADD : LOGIC.html, LRUN.html, MATH1.html, MATH2.html, MATH3.html in sw MOD : sw/index.html

--- a/sw/index.html
+++ b/sw/index.html
@@ -34,12 +34,17 @@ Kosi la Programu<br>
 - <a href=FOR.html>Kuzidisha kwa rejeleza FOR/NEXT</a><br>
 - <a href=BIN.html>Tengenza namba jozi / BIN$</a><br>
 - <a href=LET.html>Hifadhi namba / LET</a><br>
+- <a href=LRUN.html>Unganisha programu / LRUN</a><br>
 - <a href=BTN.html>Julisha mawazo / BTN</a><br>
+- <a href=LOGIC.html>1 + 1 = 1, Fumbo la Mantiki</a><br>
 </section>
 
 <section>
 Kosi la Hesabu<br>
 - <a href=ADD.html>Jumlisha kutoka 1 mpaka 100</a><br>
+- <a href=MATH1.html>Kutafuta Kigawe cha Shirika(Hisabati)</a><br>
+- <a href=MATH2.html>Kutafuta Kigawo cha Shirika(Hisabati)</a><br>
+- <a href=MATH3.html>Kukadiria namba (Hisabati)</a><br>
 </section>
 
 <section>
