--- a/sw/index.html
+++ b/sw/index.html
@@ -26,11 +26,14 @@ body {
 <section>
 Kosi la Programu<br>
 - <a href=LED.html>Washa! / LED</a><br>
+- <a href=WAIT.html>Dhibiti muda / WAIT</a><br>
 - <a href=INPUT.html>Jibu katika namba / INPUT</a><br>
 - <a href=PRINT.html>Kokotoa namba / PRINT</a><br>
 - <a href=LOCATE.html>Endesha mahali au sehemu / LOCATE</a><br>
 - <a href=IF.html>Iache iamue / IF</a><br>
 - <a href=GOTO.html>Tengeneza ishara ya usiku / GOTO</a><br>
+- <a href=SAVE-LOAD-NEW.html>Tunza programu / SAVE/LOAD/NEW</a><br>
+- <a href=RUN-LIST.html>Kumbumbu ya programu / RUN/LIST</a><br>
 - <a href=BEEP.html>Tengeneza sauti / BEEP</a><br>
 - <a href=PLAY.html>Tunga muziki / PLAY</a><br>
 - <a href=FOR.html>Kuzidisha kwa rejeleza FOR/NEXT</a><br>
@@ -38,7 +41,9 @@ Kosi la Programu<br>
 - <a href=LET.html>Hifadhi namba / LET</a><br>
 - <a href=LRUN.html>Unganisha programu / LRUN</a><br>
 - <a href=BTN.html>Julisha mawazo / BTN</a><br>
+- <a href=RND.html>Tengeneza kete au dadu / RND (RANDOM)</a><br>
 - <a href=PCG.html>Tengeneza kibambo asili / PCG</a><br>
+- <a href=TICK.html>Tengeneza saa ya kupima wakati / TICK</a><br>
 - <a href=LOGIC.html>1 + 1 = 1, Fumbo la Mantiki</a><br>
 </section>
 
@@ -60,10 +65,12 @@ Kosi la Programu Tumizi<br>
 - <a href=NUMQ.html>ChemshaBongo ya Namba</a><br>
 - <a href=JANKEN.html>Mchezo wa Mkono (Janken)</a><br>
 - <a href=KAWAKUDARI.html>Mchezo wa Kawakudari</a><br>
+- <a href=TOUCHTYPING.html>Gusa Kuandika</a><br>
 - <a href=NUMTYPE.html>Mchezo wa kuchapa Namba</a><br>
 - <a href=JUMP.html>Mchezo wa Kawakudari</a><br>
 - <a href=NEKONIKOBAN.html>Mchezo wa Nekonikoban</a><br>
 - <a href=JINKOSIM.html>Population simulation</a><br>
+- <a href=WHATDAY.html>Siku gani katika wiki ulizaliwa?</a><br>
 - <a href=GACHA.html>Gacha simulation</a><br>
 </section>
 
