--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,7 @@ body {
 
 <div id="main">
 <section>
-プログラミング コース<br>
+- <a href=TEST.html>テスト TEST</a><br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
