リンク追加とタイトル変更

--- a/TEST.html
+++ b/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>TEST</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -23,7 +23,8 @@ DRAWコマンドでせんをかくことができるよ
 うえのほうのもじがきえたかな？
 </section>
 
-
+- <a href=TEST.html>テスト TEST</a><br> 
+    
 <section>
 FORコマンドでくりかえしせんをかこう！
 <div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
