--- a/TEST.html
+++ b/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>焼きおにぎりを作ってみよう！　DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -8,11 +8,15 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
+⑴調味料を全てボウルにいれて混ぜ合わせよう！
+☆しょうゆ大さじ2
+☆だしの素小さじ1
+☆みりん小さじ1
+☆ごま油小さじ1〜2
+これを混ぜるよ
 <div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
+⑵混ぜ合わせた調味料にご飯を入れムラがないようにしっかりまぜます♪<br>
+(この時点で味見出来るのもいいですよね)<br>
 つぎの70,70,でつぎのばしょをしていしよう。
 </section>
     
