--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,9 @@ body {
 
 <div id="main">
 <section>
-プログラミング コース<br>
+	<a href=TEST.html>test LED</a><br>
+	プログラミング コース<br>
+	
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
