セクション１を変えたよ

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,17 +8,15 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+ヘリコプターを動かしてみよう！
+<div class=ichigojam>10 X=16</div>
+はじまりのばしょをしていしてあげよう<br>
+X=16でがめんのまんなかにヘリコプターがひょうじされるよ<br>
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
+
 <div class=ichigojam>DRAW 1,1,70,70,0</div>
 うえのほうのもじがきえたかな？
 </section>
