Update and rename ja/index.html to TEST.html

--- a/TEST.html
+++ b/TEST.html
@@ -22,6 +22,7 @@ body {
 <h1>IchigoJam プリント</h1>
 
 <div id="main">
+	<a href=test.html>test WAIT</a><br>
 <section>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
