--- a/ja/index.html
+++ b/ja/index.html
@@ -24,7 +24,7 @@ body {
 <div id="main">
 <section>
 プログラミング コース<br>
-- <a href=LED.html>ひかりをあやつる LED</a><br>
+- <a href=TEST.html>テスト TEST</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
 - <a href=SAVE-LOAD-NEW.html>プログラムのほぞん SAVE/LOAD/NEW</a><br>
