--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>てすと　TEST</title>
+<title>テスト　TEST</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト　test</h1>
+<h1>てすと　test</h1>
 
 
 <section>
