--- a/ja/index.html
+++ b/ja/index.html
@@ -23,6 +23,8 @@ body {
 
 <div id="main">
 <section>
+Special コース<br>
+- <a href=TEST.html>テスト TEST LED</a><br>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
