--- a/ja/index.html
+++ b/ja/index.html
@@ -22,7 +22,9 @@ body {
 <h1>IchigoJam プリント</h1>
 
 <div id="main">
-<section>
+<section>- 
+
+	<a href=TEST.html>ひかりをあやつる TEST</a><br>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
