--- a/ja/index.html
+++ b/ja/index.html
@@ -23,6 +23,9 @@ body {
 
 <div id="main">
 <section>
+	
+- <a href=TEST.html>ひかりをあやつる TEST</a><br>
+	
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
