--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>サクサククッキーをつくってみよう！　DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -8,7 +8,14 @@
 
 
 <section>
-がめんにせんをかいてみよう！
+＊材料＊
+    1薄力粉　１２０g
+    2無塩バター　５０g
+    3卵黄　　　　1個分
+    4グラニュー糖　または 蜂蜜
+    5塩　少し
+    
+    
 DRAWコマンドでせんをかくことができるよ
 <div class=ichigojam>DRAW 1,1,70,70</div>
 ２つばしょをしていしてあげよう<br>
