--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -9,11 +9,11 @@
 
 <section>
 ＊材料＊
-    1薄力粉　１２０g
-    2無塩バター　５０g
-    3卵黄　　　　1個分
-    4グラニュー糖　または 蜂蜜
-    5塩　少し
+    1薄力粉　１２０g<br>
+    2無塩バター　５０g<br>
+    3卵黄　　　　1個分<br>
+    4グラニュー糖　または 蜂蜜<br>
+    5塩　少し<br>
     
     
 DRAWコマンドでせんをかくことができるよ
