--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,11 +4,10 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト　test</h1>
-
+<h1>サクサククッキーをつくってみよう！</h1><br>
 
 <section>
-＊材料＊
+<h1>＊材料＊</h1>
     1薄力粉　１２０g<br>
     2無塩バター　５０g<br>
     3卵黄　　　　1個分<br>
