--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>サクサククッキーをつくってみよう！　DRAW</title>
+<title>TEST DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -8,11 +8,6 @@
 
 <section>
 <h1>＊材料＊</h1>
-    1薄力粉        １２０g<br>
-    2無塩バター      ５０g<br>
-    3卵黄         1個分<br>
-    4グラニュー糖　または 蜂蜜<br>
-    5塩　          少し<br>
     
     
 DRAWコマンドでせんをかくことができるよ
