--- a/ja/index.html
+++ b/ja/index.html
@@ -24,7 +24,8 @@ body {
 <div id="main">
 <section>
 	
-- <a href=TEST.html>ひかりをあやつる TEST</a><br>
+- <a href=TEST.html>テスト TEST</a><br>
+
 	
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
