ちょっと修正

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,16 +8,15 @@
 
 
 <section>
-はじまりのばしょをしていしてあげよう
+はじまりのばしょをしていしてあげよう！
 <div class=ichigojam>10 X=16</div>
-16でばしょをしていしよう。<br>
+16でヘリコプターがはじめにいるばしょをしていしよう。<br>
 <br>
 </section>
     
 
 <section>
-がめんにヘリコプターがでてきたかな？<br>
-つぎにヘリコプターをそうさするためのプログラムをしてみよう！
+ヘリコプターをそうさするためのじゅんびをしよう！
 <div class=ichigojam>20 CLS
 30 K=INKEY()
 40 WAIT 6</div>
@@ -33,8 +32,8 @@ INKEY()でIchigojamがおされたキーをしることができるよ。
 </section>
 
 <section>
-おされたキーとヘリコプターをつなげよう！
-<div class=ichigojam>70 LOCATE X,10:PRINT ""
+おされたキーとヘリコプターをつなげよう！(キャラクターコード243、ALT+J)
+<div class=ichigojam>70 LOCATE X,10:PRINT "?CHR$(243)"
 80 GOTO 20</div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
@@ -42,8 +41,9 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 <b>やってみよう！</b><br>
-1. K=30とK=31にしてみるとどうなるかな？<br>
-2. くふうしてヘリコプターを自由自在に動かしてみよう！<br>
+1. ヘリコプターいがいのモノもうごかしてみよう！<br>
+2. K=30とK=31にしてみるとどうなるかな？<br>
+3. くふうして自由自在に動かしてみよう！
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
