--- a/ja/index.html
+++ b/ja/index.html
@@ -24,6 +24,7 @@ body {
 <div id="main">
 <section>
 - <a href=TEST.html>テスト TEST</a><br>
+プログラミングコース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
