--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -16,7 +16,7 @@ DRAWコマンドでせんをかくことができるよ
 つぎの70,70,でつぎのばしょをしていしよう。
 </section>
     
-
+寝るねうrねウリアvjfにゔぁp０雨frjんfjdなjdbはbファhふい気に入った物hがあったらなん伝もいいと思うおっわらした
 <section>
 ばしょのつぎに0とくわえると、せんをけせるよ。
 <div class=ichigojam>DRAW 1,1,70,70,0</div>
