細かい修正

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>ヘリコプターを動かしてみよう！　MOVE</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -11,7 +11,6 @@
 はじまりのばしょをしていしてあげよう！
 <div class=ichigojam>10 X=16</div>
 16でヘリコプターがはじめにいるばしょをしていしよう。<br>
-<br>
 </section>
     
 
@@ -41,8 +40,8 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 <b>やってみよう！</b><br>
-1. ヘリコプターいがいのモノもうごかしてみよう！<br>
-2. K=30とK=31にしてみるとどうなるかな？<br>
+1. ヘリコプターいがいのモノをうごかしてみよう！<br>
+2. K=30とK=31にして、やじるしキーのうえとしたをおしてみるとどうなるかな？<br>
 3. くふうして自由自在に動かしてみよう！
 </section>
 
