--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>ヘリコプターを動かしてみよう！　MOVE</title>
+<title>ヘリコプターをうごかしてみよう！　MOVE</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>ヘリコプターを動かしてみよう！　MOVE</h1>
+<h1>ヘリコプターをうごかしてみよう！　MOVE</h1>
 
 
 <section>
-はじまりのばしょをしていしてあげよう！
+ヘリコプターをさゆうにうごかしてみよう！<br>
+まずはじまりのばしょをしていしてあげよう！
 <div class=ichigojam>10 X=16</div>
 16でヘリコプターがはじめにいるばしょをしていしよう。<br>
 </section>
@@ -40,10 +41,11 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 <b>やってみよう！</b><br>
-1. ヘリコプターいがいのモノをうごかしてみよう！<br>
-2. K=30とK=31にして、やじるしキーのうえとしたをおしてみるとどうなるかな？<br>
-3. くふうして自由自在に動かしてみよう！
+1. ヘリコプターをじょうげにうごかしてみよう<br>
+2. ヘリコプターいがいのモノをうごかしてみよう！<br>
+3. くふうしてじゆうじざいにうごかしてみよう！
 </section>
+出典:https://edtechzine.jp/article/detail/675
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
