出典書いたよ

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -45,7 +45,7 @@ RUNでじっこうしてみると、どうなるかな？
 2. ヘリコプターいがいのモノをうごかしてみよう！<br>
 3. くふうしてじゆうじざいにうごかしてみよう！
 </section>
-出典:https://edtechzine.jp/article/detail/675
+参考:IchigoJamで簡単なゲームを作ってみよう～お父さんが教えるプログラミング実践編⑥ https://edtechzine.jp/article/detail/675
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
