--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -33,8 +33,8 @@ INKEY()でIchigojamがおされたキーをしることができるよ。
 </section>
 
 <section>
-おされたキーとヘリコプターをつなげよう！(キャラクターコード243、ALT+J)
-<div class=ichigojam>70 LOCATE X,10:PRINT "?CHR$(243)"
+おされたキーとヘリコプターをつなげよう！(ヘリコプターをだすにはALT+J)
+<div class=ichigojam>70 LOCATE X,10:PRINT "🚁"
 80 GOTO 20</div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
