「もじのしょうたい CHR$/ASC」追加

--- a/ja/index.html
+++ b/ja/index.html
@@ -44,6 +44,7 @@ body {
 - <a href=PCG.html>オリジナルキャラをつくる PCG</a><br>
 - <a href=LOGIC.html>1たす1は1、ろんりのなぞ</a><br>
 - <a href=LRUN.html>プログラムをつなげる LRUN</a><br>
+- <a href=CHR.html>もじのしょうたい CHR$/ASC</a><br>
 </section>
 
 <section>
