--- a/ja/DRAW.html
+++ b/ja/DRAW.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>がめんにいたずらしてみよう！　DRAW</title>
-<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-<script src="ichigojamlist.js"></script>
+<link rel="stylesheet" type="text/css" href="http://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
 <h1>がめんにいたずらしてみよう！　DRAW</h1>
