--- a/ja/CHR.html
+++ b/ja/CHR.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>もじのしょうたい CHR$/ASC</title>
-<link rel="stylesheet" type="text/css" href="http://ichigojam.github.io/print/ja/ichigojamlist.css">
+<link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
 <h1>もじのしょうたい CHR$/ASC</h1>
