--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
-<link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
+<title>よるのしんごうをつくる GOTO（ゴートゥー） - IchigoJam</title>
+<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト TEST</h1>
-
-
-<section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
-</section>
-    
+<h1>をつくる GOTO（ゴートゥー）</h1>
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
-</section>
-
-
-<section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
-</div>
-RUNでじっこうしてみると、どうなるかな？
+よるのてんめつしんごう、0.5びょうごとについたりきえたり。
+<div id="btn-1"></div><script>make15("btn-1", "10 LED1:WAIT30:LED0:WAIT30\n20 LED1:WAIT30:LED0:WAIT30\nRUN")</script>
+10ぎょうをうちこんだら、もどって、せんとうの10を20にかえてエンター<br>
+LISTで、20ぎょうにコピーされた10ぎょうをかくにん！
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+あさになるまで、やく3まんかい。ずっとてんめつさせる、GOTO（ゴートゥー）コマンド。
+<div id="btn-2"></div><script>make15("btn-2", "10 LED1:WAIT30:LED0:WAIT30\n20 GOTO 10")</script>
+GOTOのうしろのかずは、ジャンプさき<br>
+&gt; 10ぎょう、1かいてんめつ<br>
+&gt; 20ぎょう、10ぎょうへジャンプ！<br>
+とめるときは、[esc]（エスケープ）キー
 </section>
 
+<section>
+こうそくてんめつ
+<div id="btn-3"></div><script>make15("btn-3", "LIST\n10 LED1:WAIT3:LED0:WAIT3")</script>
+LIST(=F4)でひょうじ<br>
+10ぎょうの、2つある30を3にかえて、エンター、RUN(=F5)
+</section>
+
+<section>
+<div id="btn-4"></div><script>make15("btn-4", "15 LED1:WAIT30:LED0:WAIT30")</script>
+10ぎょうと20ぎょうのあいだに15ぎょうをつくろう<br>
+こうごにくりかえす、みじかいてんめつと、ながいてんめつ
+</section>
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. よるのしんごうプログラムにもどしてみよう<br>
+2. ひかっているじかんだけ、ながくしてみよう<br>
+3. こうそくにてんめつさせて、ひかっているときにとめるゲームにしよう<br>
+4. ぎょうのばんごうを100から100きざみでつくってみよう<br>
+5. すきなてんめつパターンをつくってだれかにじまんしよう<br>
 </section>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
-<a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
+<div id="credit">CC BY IchigoJam <a href='http://ichigojam.net/'>http://ichigojam.net/</a></div>
 </body></html>
