--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -10,13 +10,13 @@
 ラベル(LABEL)ってなに？<br>
 ラベルはにほんごで「ふだ」とか「はりがみ」のこと。<br>
 すきなことばのせんとうに@（アットマーク）をつける。
-<div id="btn-1"></div><script>make15("test-1", "10 @LABEL")</script>
+<div id="test-1"></div><script>make15("test-1", "10 @LABEL")</script>
 このプログラムはにゅうりょくしなくてもいいよ。
 </section>
 
 <section>
 りょこうのもくてきち「おきなわ」をつくろう。
-<div id="btn-1"></div><script>make15("test-2", f2s(function() {/*
+<div id="test-2"></div><script>make15("test-2", f2s(function() {/*
 10 @OKI:?"ｵｷﾅﾜ"
 20 END
 */}))</script>
@@ -24,7 +24,7 @@
 
 <section>
 なんかいでもおきなわにいける、GOTO（ゴートゥー）コマンド。
-<div id="btn-2"></div><script>make15("test-3", f2s(function() {/*
+<div id="test-3"></div><script>make15("test-3", f2s(function() {/*
 10 @OKI:?"ｵｷﾅﾜ ";
 20 GOTO @OKI
 */}))</script>
@@ -34,7 +34,7 @@ GOTOのうしろにラベルをかく<br>
 
 <section>
 じぶんのすんでいるところからおきなわへいこう。
-<div id="btn-1"></div><script>make15("test-4", , f2s(function() {/*
+<div id="test-4"></div><script>make15("test-4", , f2s(function() {/*
 10 KOKO="FUKUI":GOTO @OKI
 20 @OKI:?"ｵｷﾅﾜ"
 30 END
