--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -34,7 +34,7 @@ GOTOのうしろにラベルをかく<br>
 
 <section>
 じぶんのすんでいるところからおきなわへいこう。
-<div id="test-4"></div><script>make15("test-4", , f2s(function() {/*
+<div id="test-4"></div><script>make15("test-4", f2s(function() {/*
 10 KOKO="FUKUI":GOTO @OKI
 20 @OKI:?"ｵｷﾅﾜ"
 30 END
