--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,6 @@ body {
 
 <div id="main">
 <section>
-- <a href=TEST.html>テスト TEST</a><br>
 
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
@@ -31,6 +30,7 @@ body {
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
 - <a href=SAVE-LOAD-NEW.html>プログラムのほぞん SAVE/LOAD/NEW</a><br>
 - <a href=GOTO.html>よるのしんごうをつくる GOTO</a><br>
+- <a href=GO2TRVL.html>りょこうにいく GOTOとラベル</a><br>
 - <a href=BTN.html>おもいをつたえる BTN</a><br>
 - <a href=IF.html>はんだんさせる IF</a><br>
 - <a href=BEEP.html>おとをあやつる BEEP</a><br>
