プログラム変えた

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -20,7 +20,6 @@
 ヘリコプターをそうさするためのじゅんびをしよう！
 <div class=ichigojam>20 CLS
 30 K=INKEY()
-40 WAIT 6</div>
 INKEY()でIchigojamがおされたキーをしることができるよ。
 </section>
 
@@ -35,6 +34,7 @@ INKEY()でIchigojamがおされたキーをしることができるよ。
 <section>
 おされたキーとヘリコプターをつなげよう！(ヘリコプターをだすにはALT+J)
 <div class=ichigojam>70 LOCATE X,10:PRINT "🚁"
+75 WAIT 5
 80 GOTO 20</div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
