--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -42,7 +42,7 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 <b>やってみよう！</b><br>
-1. ヘリコプターをじょうげにうごかしてみよう<br>
+1. ヘリコプターをじょうげにうごかしてみよう!<br>
 2. ヘリコプターいがいのモノをうごかしてみよう！<br>
 3. くふうしてじゆうじざいにうごかしてみよう！
 </section>
