--- a/ja/HEX.html
+++ b/ja/HEX.html
@@ -6,7 +6,7 @@
 <h1>16しんすうをつくるHEX$（ヘックス）</h1>
 
 <section>
-コンピューターがつかうもじは「0」と「1」の2つだけ。でもにんげんにはよみにくい。
+コンピューターがつかうもじは「0」と「1」の2つだけ(2しんすう)。でもにんげんにはよみにくい。
 そこで16しんすうのでばん
 </p><p>
 16しんすうでつかうすうじは0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F
@@ -28,16 +28,16 @@ FOR I=0 TO 256:?BIN$(I),I:WAIT 30:NEXT
 10  2 
 11  3 
 */}))</script>
-2しんすうは、bit（ビット）でかぞえます。3は11で2bit。8は1000で4bit。
+16しんすうはFのつぎは10(いちゼロ)になります
 </section>
 
 <section>
 <b>やってみよう！</b><br>
-1. 16を2しんすうにしてみよう<br>
-2. 2しんすうの101、1010、10100をかずにしてみよう<br>
+1. 16を16しんすうにしてみよう<br>
+2. 16しんすうの1A、6F、BBをかずにしてみよう<br>
 3. 40を16しんすうにしてみよう<br>
 4. 12けたであらわせるさいだいのかずは？<br>
-5. -1を2しんすうにしてみよう<br>
+5. -1を16しんすうにしてみよう<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
