--- a/ja/index.html
+++ b/ja/index.html
@@ -35,6 +35,7 @@ body {
 - <a href=PLAY.html>おんがくをつくる PLAY</a><br>
 - <a href=PRINT.html>けいさんさせる PRINT</a><br>
 - <a href=LOCATE.html>ばしょをあやつる LOCATE</a><br>
+- <a href=MOVE.html>ヘリコプターをうごかそう！ MOVE</a><br>
 - <a href=RND.html>サイコロをつくる RND</a><br>
 - <a href=TICK.html>ストップウォッチをつくる TICK</a><br>
 - <a href=LET.html>かずをきおくする LET</a><br>
