--- a/ja/HEX.html
+++ b/ja/HEX.html
@@ -14,9 +14,9 @@
 これが16しんすう。
 </p><p>
 かずを16しんすうにかえるHEX$（ヘックス）コマンド<br>
-<div id="hex1-1"></div><script>make15("hex1-1", "?HEX$(2)\n8 \n?HEX$(10)\n5 ")</script>
+<div id="hex1-1"></div><script>make15("hex1-1", "?HEX$(2)\n2 \n?HEX$(10)\nA ")</script>
 2しんすうをかずにする、きごう「`」(shift+@か1のひだり)<br>
-<div id="hex1-2"></div><script>make15("hex1-2", "?`1111\n15 \n?`100000000\n256 ")</script>
+<div id="hex1-2"></div><script>make15("hex1-2", "?#16\n10 \n?#100\n256 ")</script>
 </section>
 
 <section>
