--- a/ja/HEX.html
+++ b/ja/HEX.html
@@ -15,7 +15,7 @@
 </p><p>
 かずを16しんすうにかえるHEX$（ヘックス）コマンド<br>
 <div id="hex1-1"></div><script>make15("hex1-1", "?HEX$(2)\n2 \n?HEX$(10)\nA ")</script>
-2しんすうをかずにする、きごう「`」(shift+@か1のひだり)<br>
+16しんすうをかずにする、きごう「#」(shift+3)<br>
 <div id="hex1-2"></div><script>make15("hex1-2", "?#16\n10 \n?#100\n256 ")</script>
 </section>
 
