--- a/ja/HEX.html
+++ b/ja/HEX.html
@@ -35,7 +35,7 @@ FOR I=0 TO 256:?HEX$(I),I:WAIT 30:NEXT
 9  9
 A  10
 */}))</script>
-16しんすうはFのつぎは10(いちゼロ)になります
+16しんすうではFのつぎは10(いちゼロ)になります
 </section>
 
 <section>
