--- a/ja/HEX.html
+++ b/ja/HEX.html
@@ -7,11 +7,11 @@
 
 <section>
 コンピューターがつかうもじは「0」と「1」の2つだけ(2しんすう)。でもにんげんにはよみにくい。
-そこで16しんすうのでばん
+そこで16しんすうのでばん<br>
 </p><p>
-16しんすうでつかうすうじは0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F
+16しんすうでつかうすうじは0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F<br>
 ふつう、9に1たすと、10と2もじになりますが、16しんすうでは9のつぎはAになります。
-これが16しんすう。
+これが16しんすう。<br>
 </p><p>
 かずを16しんすうにかえるHEX$（ヘックス）コマンド<br>
 <div id="hex1-1"></div><script>make15("hex1-1", "?HEX$(2)\n2 \n?HEX$(10)\nA ")</script>
@@ -25,15 +25,10 @@
 FOR I=0 TO 256:?HEX$(I),I:WAIT 30:NEXT
 0  0 
 1  1 
-2  2 
-3  3
-4  4
-5  5
-6  6
-7  7
-8  8
-9  9
-A  10
+... 
+9  9 
+A  10 
+... 
 */}))</script>
 16しんすうではFのつぎは10(いちゼロ)になります
 </section>
