タイトル変えた

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>初めてのIchigiJam　DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト　TEST</h1>
+<h1>初めてのIchigoJam</h1>
 
 
 <section>
