セクション１完了

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,12 +8,13 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+LEDを付けてみよう！
+
+
+<div class=ichigojam>LED1</div>
+LED1と入力してEnterキーを押す<br>
+LEDはついたかな？<br>
+じゃあ消すためにはどう入力すればいいかな！
 </section>
     
 
