セクション２完了

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -19,14 +19,14 @@ LEDはついたかな？<br>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
+
+<div class=ichigojam>LED0</div>
+LEDは消えたかな？
 </section>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
+次は点滅させてみよう！
 <div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
 </div>
 RUNでじっこうしてみると、どうなるかな？
