セクション３を変更

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -27,7 +27,9 @@ LEDは消えたかな？
 
 <section>
 次は点滅させてみよう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+<div class=ichigojam>1 LED1:WAIT10
+    2 LED0:WAIT10
+    3 GOTO1
 </div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
