--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>初めてのIchigiJam　DRAW</title>
+<title>はじめてのIchigiJam　DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>初めてのIchigoJam</h1>
+<h1>はじめてのIchigoJam</h1>
 
 
 <section>
-LEDを付けてみよう！
+LEDをつけてみよう！
 
 
 <div class=ichigojam>LED1</div>
-LED1と入力してEnterキーを押す<br>
+LED1とにゅうりょくしてEnterキーをおす<br>
 LEDはついたかな？<br>
-じゃあ消すためにはどう入力すればいいかな！
+じゃあけすためにはどうにゅうりょくすればいいかな！
 </section>
     
 
 <section>
 
 <div class=ichigojam>LED0</div>
-LEDは消えたかな？
+LEDはきえたかな？
 </section>
 
 
 <section>
-次は点滅させてみよう！
-<div class=ichigojam>1 LED1:WAIT10
-    2 LED0:WAIT10
-    3 GOTO1
+つぎはてんめつさせてみよう！
+<div class=ichigojam>1 LED1:WAIT30 
+2 LED0
 </div>
-RUNでじっこうしてみると、どうなるかな？
+1,2,3にわけてにゅうりょくし、WAIT＋すうじをにゅうりょくでじゅんばんとじかんをプログラミング 
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+RUNでじっこうしてみると、どうなるかな？<br>
+これをくりかえすようにプログラミングするよ！
+<div class=ichigojam>1　LED１：WAIT30
+２　LED0：WAIT30
+3 GOTO1 </div>
 </section>
 
 
 <section>
-<b>やってみよう！</b><br>
+
+    <b>やってみよう！</b><br>
 1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
 2. DRAWのI*のよこのかずをかえてみよう<br>
 3. くふうしてもじやえをかいてみよう！<br>
