やってみようの変更

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -35,7 +35,7 @@ LEDはきえたかな？
 
 <section>
 RUNでじっこうしてみると、どうなるかな？<br>
-これをくりかえすようにプログラミングするよ！
+さいごにこれをくりかえすようにプログラミングするよ！
 <div class=ichigojam>1　LED１：WAIT30
 ２　LED0：WAIT30
 3 GOTO1 </div>
@@ -45,9 +45,9 @@ RUNでじっこうしてみると、どうなるかな？<br>
 <section>
 
     <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. WAITのかずをもっとちいさくしてみるとどうなるかな？<br>
+2. ESCキーをおすといちじていしができるよ！<br>
+3. うまくLEDをけせるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
