--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -47,7 +47,7 @@ RUNでじっこうしてみると、どうなるかな？<br>
     <b>やってみよう！</b><br>
 1. WAITのかずをもっとちいさくしてみるとどうなるかな？<br>
 2. ESCキーをおすといちじていしができるよ！<br>
-3. うまくLEDをけせるかな？<br>
+3. ミッション！うまくLEDをけせるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
