<br>記述忘れ修正

--- a/ja/Population simulation.html
+++ b/ja/Population simulation.html
@@ -9,12 +9,12 @@
 
 
 <section>
-かみさまになったきぶんでじんこうのシミュレーションをしてみよう!
-    
-せかいじんこうは、77おくにん。１ねんでさいだい5600まんにんへって、さいだい6700まんにんふえました。
-(せかいじんこうのすうちのさんこうさき　こくさいれんごうこうほうセンター　2019.7)
-(へるさいだいすうのさんこうさき　せかいはなにでしぬのか　1996.8)
-(ふえるさいだいすうのさんこうさき　こくさいれんごうこうほうセンター　2019.7)
+かみさまになったきぶんでじんこうのシミュレーションをしてみよう!<br>
+    <br>
+せかいじんこうは、77おくにん。１ねんでさいだい5600まんにんへって、さいだい6700まんにんふえました。<br>
+(せかいじんこうのすうちのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
+(へるさいだいすうのさんこうさき　せかいはなにでしぬのか　1996.8)<br>
+(ふえるさいだいすうのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
 
 <div class=ichigojam>10 P=770000
 20 D=RND(5600)
