--- a/ja/Population_simulation.html
+++ b/ja/Population_simulation.html
@@ -11,7 +11,8 @@
 <section>
 かみさまになったきぶんでじんこうのシミュレーションをしてみよう!<br>
     <br>
-せかいじんこうは、77おくにん。１ねんでさいだい5600まんにんへって、さいだい6700まんにんふえました。<br>
+せかいじんこうは、77おくにん。<br>
+１ねんでさいだい5600まんにんへって、さいだい6700まんにんふえました。<br>
 (せかいじんこうのすうちのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
 (へるさいだいすうのさんこうさき　せかいはなにでしぬのか　1996.8)<br>
 (ふえるさいだいすうのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
