--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,22 +4,22 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト　TEST</h1>
+<h1>遭難スキーゲーム</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+遭難した雪山から滑り降りるゲーム。遭難者達のコマンド
+<div class=ichigojam>10 CLS:X=16
+20 LC X,5:?"👾"</div>
+降りる時に邪魔な木を設置しよう。<br>
+木の本数が足りなかったら、<br>
+複数個置いておこう。
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
+その分難しくなるから増やしすぎには注意。
+<div class=ichigojam>30 LC RND(32),23:?"🚀"</div>
 うえのほうのもじがきえたかな？
 </section>
 
