--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -20,21 +20,24 @@
 <section>
 その分難しくなるから増やしすぎには注意。
 <div class=ichigojam>30 LC RND(32),23:?"🚀"</div>
-うえのほうのもじがきえたかな？
+背景などを入れよう
 </section>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+だんだん早く滑れるようにしよう
+<div class=ichigojam>33 WAIT 3
+34 VIDEO2
+35 WAIT 6-TICK()/180
 </div>
-RUNでじっこうしてみると、どうなるかな？
+あとは遭難者達を動かせるようにしたりしてみよう
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+木に当たり判定をつけたりしよう
+<div class=ichigojam>36 X=X-BTN(28)+BTN(29)
+37 IF SCR(X,5) END
+38 X=(X+30)%30</div>
 </section>
 
 
