--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -43,9 +43,9 @@
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. このゲームのバックストーリーなどを考えてみよう<br>
+2. もっと難しくするにはどうすればいいだろう？<br>
+3. このゲームをより面白くするためにはどうすればいいだろう？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
