--- a/moonbyul.html
+++ b/moonbyul.html
@@ -21,6 +21,7 @@ DRAWコマンドでせんをかくことができるよ
 ばしょのつぎに0とくわえると、せんをけせるよ。
 <div class=ichigojam>DRAW 1,1,70,70,0</div>
 うえのほうのもじがきえたかな？
+    <img scr="e0d7a0b7ab9bde56e1d712b554cd300b6.jpeg">
 </section>
 
 
