--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,14 +4,13 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>天気を占う</h1>
+<h1>明日天気になあれ</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
+天気を占ってみよう！F5でランダムに表示されます！
+<div class=ichigojam>10　LET　A,RND（4）/div>
+<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
 </section>
