--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -9,8 +9,9 @@
 
 <section>
 天気を占ってみよう！F5でランダムに表示されます！
-<div class=ichigojam>10　LET　A,RND（4）</div>
-<br>さいしょの1,1でさいしょのばしょ。<br>
+<div class=ichigojam>10　LET　A,RND（4） </div>
+<br>hggg
+    さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
 </section>
     
